fix tree left side chop on mobile

--- a/src/component/css/tree.css
+++ b/src/component/css/tree.css
@@ -26,7 +26,7 @@
     */
     padding-top: 2%;
     padding-bottom: 5%;
-    width: 100%;
+    width: 95%;
     margin: auto;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     margin-top: 2%;
